app.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mstream-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mstream
  template:
    metadata:
      labels:
        app: mstream
    spec:
      containers:
      - name: mstream
        image: linuxserver/mstream
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: music-storage
          mountPath: /music
        - name: config
          mountPath: /config
      volumes:
      - name: music-storage
        emptyDir: {}
      - name: config
        emptyDir: {}
