app.sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mstream-app
spec:
  serviceName: "mstream-service"
  replicas: 1
  selector:
    matchLabels:
      app: mstream
  template:
    metadata:
      labels:
        app: mstream
    spec:
      securityContext:
        fsGroup: 0   # Asegura que el grupo tiene acceso de lectura/escritura en el directorio
      volumes:
      - name: music-volume
        persistentVolumeClaim:
          claimName: mstream-pvc
      - name: config
        emptyDir: {}
      containers:
      - name: mstream
        image: linuxserver/mstream
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: music-volume
          mountPath: /music
        - name: config
          mountPath: /config
